--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@mui/material": "^6.0.1",
     "@mui/x-date-pickers": "^7.15.0",
     "@mui/x-date-pickers-pro": "^7.15.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
@@ -54,5 +52,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "jest": "^27.5.1"
   }
 }
